--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@
 }
 @media screen and (min-width: 360px) {
     .ontop{
-        background-color: gray;
+        background-color: rgb(255, 153, 0);
         width: 100%;
         margin: 0;
         position: absolute;
@@ -36,4 +36,7 @@
         position: absolute;
         margin: 0%;
     }
+}
+html{
+    background-color: rgb(69, 107, 244);
 }
